signup page css

--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -1,81 +1,33 @@
 {% extends 'base.html' %}
-
-{% block title %}
-    sign up
-{% endblock %}
+{% block header-image %}{% endblock %}
+{% block header-title %}회원가입{% endblock %}
 {% block content %}
-
-    <!-- Sign Up Form -->
+    <h4>소셜 계정으로 바로 가입</h4>
+    <div class="btn-large fb-connect">
+        <a href="{% url 'social:begin' 'facebook' %}?next={{ request.path }}"><span>f</span>페이스북으로 회원가입</a>
+    </div>
+    <h4>이메일로 가입</h4>
     <form id="signup" class="form-horizontal" method="post" action="{% url 'signup' %}" enctype="multipart/form-data">
         {% csrf_token %}
+        {{ signupform.username }}
+        {{ signupform.username.errors|striptags }}
 
-        <!-- Username input-->
-        <div class="row control-group">
-            <div class="form-group col-xs-12 floating-label-form-group controls">
-                {{ signupform.username.label_tag }}
-                {{ signupform.username }}
-            <span class="field-error">
-            {{ signupform.username.errors|striptags }}
-            </span>
-            </div>
-        </div>
+        {{ signupform.email }}
+        {{ signupform.email.errors|striptags }}
 
-        <!-- Email input-->
-        <div class="row control-group">
-            <div class="form-group col-xs-12 floating-label-form-group controls">
-                {{ signupform.email.label_tag }}
-                {{ signupform.email }}
-            <span class="field-error">
-            {{ signupform.email.errors|striptags }}
-            </span>
-            </div>
-        </div>
-
-        {{ signupform.nickname.label_tag }}
         {{ signupform.nickname }}
         {{ signupform.nickname.errors|striptags }}
 
-        {{ signupform.avatar.label_tag }}
         {{ signupform.avatar }}
         {{ signupform.avatar.errors|striptags }}
 
-        <!-- Password1 input-->
-        <div class="row control-group">
-            <div class="form-group col-xs-12 floating-label-form-group controls">
-                {{ signupform.password1.label_tag }}
-                {{ signupform.password1 }}
-            <span class="field-error">
-            {{ signupform.password1.errors|striptags }}
-            </span>
-            </div>
-        </div>
+        {{ signupform.password1 }}
+        {{ signupform.password1.errors|striptags }}
 
-        <!-- Password2 input-->
-        <div class="row control-group">
-            <div class="form-group col-xs-12 floating-label-form-group controls">
-                {{ signupform.password2.label_tag }}
-                {{ signupform.password2 }}
-            <span class="field-error">
-            {{ signupform.password2.errors|striptags }}
-            </span>
-            </div>
-        </div>
-
-        <br>
-
-        <!-- Button -->
-        <div class="row">
-            <div class="form-group col-xs-12">
-                <button id="signup" name="signup" class="btn btn-block btn-default" type="submit">Sign Up</button>
-                <hr>
-                <center>
-                    <a href="{% url 'social:begin' 'facebook' %}?next={{ request.path }}">Login with Facebook</a>
-                    Or <a href="{% url 'login' %}"><u>log in</u></a>
-                    if you have an account.
-                </center>
-            </div>
-        </div>
-
+        {{ signupform.password2 }}
+        {{ signupform.password2.errors|striptags }}
+        <button id="signup" name="signup" class="btn-large btn-block btn-default" type="submit">가입하기</button>
     </form>
+    이미 계정이 있으신 분은 <a href="{% url 'login' %}">로그인</a> 해주세요.
 
 {% endblock %}
