회원가입시 아바타 미리보기 추가

--- a/hobbycoding/static/less/common.less
+++ b/hobbycoding/static/less/common.less
@@ -114,6 +114,10 @@ section.page-header {
   }
 }
 
+//*-- 페이지 내부 섹션 *--//
+section.section {
+}
+
 //*-- 꾸밈 요소 *--//
 .tag-box {
   display: inline-block;
@@ -129,3 +133,5 @@ section.page-header {
 footer.page-footer {
   background: #505050;
 }
+
+//*-- Materializecss override *--//
