밋업 썸네일 정사각형으로 리사이징해서 올리기(가로 폭은 고정)

--- a/meetup/templates/_meetup_users.html
+++ b/meetup/templates/_meetup_users.html
@@ -17,6 +17,6 @@
             {{ user.nickname }}
         </div>
     {% empty %}
-        <p>관심이 가면 하트를 눌러주세요<3</p>
+        <p>관심이 가면 하트를 눌러주세요❤️</p>
     {% endfor %}
 </div>
